<resources>
    <string name="app_name">Тестетика</string>
    <string name="login_prompt">E-mail</string>
    <string name="password_prompt">Пароль</string>
    <string name="loginButtonText">Войти</string>
    <string name="aboutOptionText">О программе</string>
    <string name="searchItemName">Обзор</string>
    <string name="createItemName">Создать</string>
    <string name="profileItemName">Профиль</string>
    <string name="createQuizButton">Новый квиз</string>
    <string name="createTestButton">Новый тест</string>
    <string name="createPollButton">Новый опрос</string>
    <string name="newNamePrompt">Введите название</string>
    <string name="newDescriptionPrompt">Введите описание</string>
    <string name="createButtonText">Создать</string>
    <string name="QUIZ_KEY">quizzes</string>
    <string name="btn_start_practice_name">Начать</string>
    <string name="quiz_name_label">Название</string>
    <string name="quiz_description_label">Описание</string>
    <string name="create_new_question_prompt">Добавить вопрос</string>
    <string name="question_name_hint">Формулировка</string>
    <string name="question_variant_hint">Вариант ответа</string>
    <string name="btn_next_label">Далее</string>
    <string name="QUESTION_KEY">questions</string>
    <string name="score_title">Результат</string>
    <string name="preparation_title">Подготовка</string>
    <string name="tv_score_label">Результат:</string>
    <string name="tv_time_label">Время:</string>
    <string name="tv_something_label">Ещё не придумал:</string>
    <string name="registration_label">Регистрация</string>
    <string name="authentication_label">Вход в систему</string>
    <string name="btn_registration_text">Зарегистрироваться</string>
    <string name="et_name_hint">Имя</string>
    <string name="logout_item_text">Выйти из аккаунта</string>
    <string name="tv_greetings_text">С возвращением!</string>
    <string name="tv_account_info_label" />
    <string name="tv_account_label_text">Вы вошли под аккаунтом:</string>
    <string name="tv_profile_quizzes_text">Ваши квизы:</string>
    <string name="tv_no_quizzes_text">Квизов пока что нет!</string>
    <string name="tv_author_label_text">Автор:</string>
    <string name="tv_questions_label_text">Вопросов:</string>
</resources>